Update and rename cse.html to index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ img {
 <fieldset>
 <legend>About Section</legend>
 <p>My name is Chirag Sharma.<br>
-As a CSE student, my interest lies in deconstructing and building with code. HTML and DBMS are the languages I use to create and manage data, driving my passion for software development.<br>
+As a CSE student, my interest lies in deconstructing and building with code. HTML and DBMS are the languages I use to create and manage data, driving my passion for softwareÂ development.<br>
 We are Four family members.<br>
 I have one sibling.</p>
 </fieldset>
